# MCPallete

./: Cargo.toml  README.md  dist-workspace.toml
src/: config.rs  main.rs  model.rs  tui.rs
