[package]
name = "MCPallete"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/japan4415/MCPallete"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "*"
crossterm = "*"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
